<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/time"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_title_app"
        style="@style/TextView.TitleApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_tip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_logo" />

    <TextView
        android:id="@+id/tv_title_cost"
        style="@style/TextView.TitleForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_cost_of_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_app" />

    <EditText
        android:id="@+id/edt_cost_service"
        style="@style/EditText.InputForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/how_much_the_cost_of_the_service"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_title_cost" />

    <TextView
        android:id="@+id/tv_value_service"
        style="@style/TextView.TitleForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/title_how_was_the_service"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edt_cost_service" />

    <RadioGroup
        android:id="@+id/category_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_value_service">

        <RadioButton
            android:id="@+id/rb_amazing"
            style="@style/TextView.Option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/color_primary"
            android:text="@string/amazing_20" />

        <RadioButton
            android:id="@+id/rb_good"
            style="@style/TextView.Option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/color_primary"
            android:text="@string/good_18" />

        <RadioButton
            android:id="@+id/rb_ok"
            style="@style/TextView.Option"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:buttonTint="@color/color_primary"
            android:text="@string/ok_15" />
    </RadioGroup>

    <TextView
        style="@style/TextView.Option"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="16dp"
        android:text="@string/round_up_tip"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_service" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/sw_round_up"
        style="@style/Switch.RoundTip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:checked="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_service"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/btn_calculate"
        style="@style/Button.MainButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/calculate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_round_up" />

    <TextView
        android:id="@+id/tv_tip_amount"
        style="@style/TextView.SecondaryTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:text="@string/tip_amount"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_calculate" />
</androidx.constraintlayout.widget.ConstraintLayout>